chore: propagate type parameters to reduce need for casts